Fix toggle switch alignment

--- a/src/app/features/outage-tracker/components/outage-grid/outage-grid.component.scss
+++ b/src/app/features/outage-tracker/components/outage-grid/outage-grid.component.scss
@@ -72,6 +72,30 @@ $app-col-width: 220px;
           color: #8b5cf6;
         }
       }
+
+      // Fix toggle switch alignment
+      :host ::ng-deep .p-toggleswitch,
+      ::ng-deep .p-toggleswitch {
+        width: 2.5rem;
+        height: 1.25rem;
+
+        .p-toggleswitch-slider {
+          border-radius: 1rem;
+
+          &::before {
+            width: 1rem;
+            height: 1rem;
+            top: 50%;
+            left: 0.125rem;
+            transform: translateY(-50%);
+            margin: 0;
+          }
+        }
+
+        &.p-toggleswitch-checked .p-toggleswitch-slider::before {
+          left: calc(100% - 1.125rem);
+        }
+      }
     }
   }
 }
